Tx: Show associated claims and supports

--- a/locale/en.json
+++ b/locale/en.json
@@ -25,8 +25,10 @@
     "ex_name_claims": "Name claims for",
     "ex_supports": "Supports",
     "ex_total_with_supports": "Total value with supports",
-    "ex_claim_id": "Claim ID:",
-    "ex_name": "Name:",
+    "ex_claim_id": "Claim ID",
+    "ex_name": "Name",
+    "ex_assoc_claims": "Associated claims",
+    "ex_assoc_claim_supports": "Associated claim supports",
 
     // transaction view
     "tx_title": "Transaction Details",
