fix claims support

--- a/locale/en.json
+++ b/locale/en.json
@@ -22,13 +22,13 @@
     "ex_summary": "Block Summary",
     "ex_supply": "Coin Supply",
     "ex_block": "Block",
-    "ex_name_claims": "Name claims for",
+    "ex_name_claims": "Name Claims for",
     "ex_supports": "Supports",
-    "ex_total_with_supports": "Total value with supports",
+    "ex_total_with_supports": "Total Value (with supports)",
     "ex_claim_id": "Claim ID",
     "ex_name": "Name",
-    "ex_assoc_claims": "Associated claims",
-    "ex_assoc_claim_supports": "Associated claim supports",
+    "ex_assoc_claims": "Claims",
+    "ex_assoc_claim_supports": "Claim supports",
 
     // transaction view
     "tx_title": "Transaction Details",
@@ -38,6 +38,9 @@
     "tx_hash": "Hash",
     "tx_address": "Address",
     "tx_nonstandard": "NONSTANDARD TX",
+
+    // claim view
+    "claim_tx": "Tx Hash",
 
     // block view
     "block_previous": "Previous",
